# 3a-emse-ecc-cpp

./: CMakeLists.txt  main.cpp  montgomery.js
.github/workflows/: tests.yaml
includes/ecc/: ECCTypes.h  ModularBigInteger.h  Montgomery.h  P256.h  Point.h  SignedBigInteger.h  UnsignedBigInteger.h
src/: BigNumber.h  UnsignedBigInteger.h
src/ecc/: BigInteger.h  ECCTypes.h  ModularBigInteger.cpp  ModularBigInteger.h  ModularUnsignedBigInteger.h  Montgomery.cpp  Montgomery.h  P256.cpp  Point.cpp  SignedBigInteger.cpp  UnsignedBigInteger.cpp  UnsignedBigInteger.h
tests/ecc/: BigIntegerTest.cpp  ModularBigInteger.cpp  ModularBigIntegerTest.cpp  MontgomeryTest.cpp  SignedBigIntegerTest.cpp  UnsignedBigIntegerTest.cpp
